baml_language/crates/baml_tests/snapshots/match_exhaustiveness/baml_tests__match_exhaustiveness__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TYPE INFERENCE ===
  Function NestedLiteralUnions:
    Return: Union([Literal(String("success")), Literal(String("client error")), Literal(String("other"))])
  Function ExhaustiveEnumWithTypedPattern:
    Return: Literal(String("any status"))
  Function ParenthesizedSingleLiteral:
    Return: Union([Literal(String("yes")), Literal(String("no"))])
  Function DuplicateEnumVariant:
    Return: Union([Literal(String("first")), Literal(String("second")), Literal(String("inactive")), Literal(String("pending"))])
    Errors:
      - Unreachable match arm
  Function WrongLiteralTypeBoolWithInt:
    Return: Literal(String("wrong type"))
    Errors:
      - Non-exhaustive match on bool: missing true, false
  Function UnreachableMultiple:
    Return: Union([Literal(String("catch all")), Literal(String("unreachable 1")), Literal(String("unreachable 2"))])
    Errors:
      - Unreachable match arm
      - Unreachable match arm
  Function OverlappingWithBindings:
    Return: Union([String, Literal(String("remaining"))])
  Function ExhaustiveNullableEnum:
    Return: Union([Literal(String("active")), Literal(String("inactive")), Literal(String("pending")), Literal(String("no status"))])
  Function NonExhaustiveBoolMissingTrue:
    Return: Literal(String("no"))
    Errors:
      - Non-exhaustive match on bool: missing true
  Function ExhaustiveEnumAllVariants:
    Return: Union([Literal(String("active")), Literal(String("inactive")), Literal(String("pending"))])
  Function JumpTableEnumDiscriminant:
    Return: Union([Literal(Int(10)), Literal(Int(20)), Literal(Int(30)), Literal(Int(40))])
  Function ExhaustiveTypeAlias:
    Return: String
  Function EnumVariantAfterTypedEnum:
    Return: Union([Literal(String("any status")), Literal(String("unreachable"))])
    Errors:
      - Unreachable match arm
  Function BoolLiteralAfterTypedBool:
    Return: Union([Literal(String("any bool")), Literal(String("unreachable"))])
    Errors:
      - Unreachable match arm
  Function LiteralUnionWithCatchAll:
    Return: Union([Literal(String("success")), Literal(String("client error")), Literal(String("other"))])
  Function ExhaustiveIntLiterals:
    Return: Union([Literal(String("OK")), Literal(String("Created")), Literal(String("No Content"))])
  Function ExhaustiveStringLiterals:
    Return: Union([Literal(String("User")), Literal(String("Assistant")), Literal(String("System"))])
  Function ExhaustiveTypeAliasWithCatchAll:
    Return: Union([String, Literal(String("fallback"))])
  Function DuplicateIntLiteral:
    Return: Union([Literal(String("first one")), Literal(String("second one")), Literal(String("other"))])
    Errors:
      - Unreachable match arm
  Function ExhaustiveClassPlusLiteral:
    Return: Union([String, Literal(String("http ok"))])
  Function ExhaustiveLiteralWithBaseType:
    Return: Union([Literal(String("ok")), Literal(String("other"))])
  Function NonExhaustiveNullableEnumMissingNull:
    Return: Union([Literal(String("active")), Literal(String("inactive")), Literal(String("pending"))])
    Errors:
      - Non-exhaustive match on Status?: missing null
  Function NonExhaustiveTypeAliasMissingOne:
    Return: String
    Errors:
      - Non-exhaustive match on Result: missing Failure
  Function BoolUnionPattern:
    Return: Literal(String("covered"))
  Function StringLiteralUnionPattern:
    Return: Union([Literal(String("chat participant")), Literal(String("system"))])
  Function ExhaustiveBool:
    Return: Union([Literal(String("yes")), Literal(String("no"))])
  Function NonExhaustiveDoubleMaybeMissingNull:
    Return: String
    Errors:
      - Non-exhaustive match on DoubleMaybe: missing null
  Function ExhaustiveDoubleMaybe:
    Return: Union([String, Literal(String("nothing"))])
  Function ExhaustiveOptionalSingleton:
    Return: Union([Literal(String("OK")), Literal(String("no code"))])
  Function BoolWithCatchAll:
    Return: Union([Literal(String("yes")), Literal(String("no"))])
  Function GuardedOnlyNonExhaustive:
    Return: Int
    Errors:
      - Non-exhaustive match on int: missing int
  Function NonExhaustiveBoolMissingFalse:
    Return: Literal(String("yes"))
    Errors:
      - Non-exhaustive match on bool: missing false
  Function IntLiteralUnionPattern:
    Return: Union([Literal(String("success with body")), Literal(String("no content"))])
  Function ThreeLevelNestedMatch:
    Return: Union([Union([Union([Literal(String("all zero")), Literal(String("z nonzero"))]), Literal(String("y nonzero"))]), Literal(String("x nonzero"))])
  Function MultipleUnreachableSpans:
    Return: Union([Literal(String("active")), Literal(String("duplicate 1")), Literal(String("inactive")), Literal(String("duplicate 2")), Literal(String("pending"))])
    Errors:
      - Unreachable match arm
      - Unreachable match arm
  Function ExhaustiveCustomBool:
    Return: Union([Literal(String("yes")), Literal(String("no"))])
  Function NestedEnumMatch:
    Return: Union([Union([Literal(String("both active")), Literal(String("first active, second inactive")), Literal(String("first active, second pending"))]), Literal(String("first inactive")), Literal(String("first pending"))])
  Function ExhaustiveMixedLiterals:
    Return: Union([Literal(String("http ok")), Literal(String("string success")), Literal(String("boolean true"))])
  Function PartialUnionPlusCatchAll:
    Return: Union([Literal(String("success or failure")), Literal(String("pending"))])
  Function ExhaustiveTrueType:
    Return: Literal(String("always true"))
  Function NestedMatchSpans:
    Return: Union([Union([Literal(String("zero true")), Literal(String("zero false")), Literal(String("unreachable nested"))]), Literal(String("other"))])
    Errors:
      - Unreachable match arm
  Function NonExhaustiveOptionalMissingValue:
    Return: Literal(String("no code"))
    Errors:
      - Non-exhaustive match on MaybeOk: missing 200
  Function GetStatus:
    Return: Enum(QualifiedName { namespace: Local, name: "Status" })
  Function EnumVariantUnion:
    Return: Union([Literal(String("actionable")), Literal(String("inactive"))])
  Function NestedTypeAlias:
    Return: Union([String, Literal(String("nothing"))])
  Function ExhaustiveFalseType:
    Return: Literal(String("always false"))
  Function NonExhaustiveOptionalMissingNull:
    Return: Literal(String("OK"))
    Errors:
      - Non-exhaustive match on MaybeOk: missing null
  Function NonExhaustiveTrueTypeWrongLiteral:
    Return: Literal(String("wrong!"))
    Errors:
      - Non-exhaustive match on AlwaysTrue: missing true
  Function ExhaustiveWithNamedCatchAll:
    Return: Union([Literal(Int(100)), Int])
  Function JumpTableTypeTag:
    Return: Union([Literal(String("int")), Literal(String("string")), Literal(String("bool")), Literal(String("float"))])
  Function NestedTypeBindings:
    Return: Union([Literal(Int(0)), Literal(Int(1))])
    Errors:
      - Unreachable match arm
  Function NonExhaustiveAliasOfLiterals:
    Return: Literal(String("ok"))
    Errors:
      - Non-exhaustive match on OkOrCreated: missing 201
  Function ExhaustiveAliasOfLiterals:
    Return: Union([Literal(String("ok")), Literal(String("created"))])
  Function WrongLiteralTypeIntWithString:
    Return: Literal(String("wrong type"))
    Errors:
      - Non-exhaustive match on int: missing int
  Function ExhaustiveEnumWithCatchAll:
    Return: Union([Literal(String("active")), Literal(String("other"))])
  Function GuardedWithFallback:
    Return: Union([Int, Literal(Int(0))])
  Function MatchArithmeticScrutinee:
    Return: Union([Literal(String("zero")), Literal(String("one")), Literal(String("other"))])
  Function HighLineNumberNonExhaustive:
    Return: Literal(String("active only"))
    Errors:
      - Non-exhaustive match on Status: missing Status.Inactive, Status.Pending
  Function NonExhaustiveNullableEnumMissingVariant:
    Return: Union([Literal(String("active")), Literal(String("inactive")), Literal(String("no status"))])
    Errors:
      - Non-exhaustive match on Status?: missing Status.Pending
  Function DeeplyNestedLiterals:
    Return: Literal(String("all success codes"))
  Function NonExhaustiveFullResultMissingOne:
    Return: String
    Errors:
      - Non-exhaustive match on FullResult: missing Pending
  Function ExhaustiveSingletonInt:
    Return: Literal(String("OK"))
  Function NonExhaustiveClassPlusLiteralMissingLiteral:
    Return: String
    Errors:
      - Non-exhaustive match on SuccessOr200: missing 200
  Function ExhaustiveNullableEnumWithTypedPattern:
    Return: Union([Literal(String("some status")), Literal(String("no status"))])
  Function DuplicateStringLiteral:
    Return: Union([Literal(String("first user")), Literal(String("second user")), Literal(String("assistant")), Literal(String("system"))])
    Errors:
      - Unreachable match arm
  Function NonExhaustiveEnumMissingOne:
    Return: Union([Literal(String("active")), Literal(String("inactive"))])
    Errors:
      - Non-exhaustive match on Status: missing Status.Pending
  Function MatchComplexScrutinee:
    Return: Union([Literal(String("x was 0")), Literal(String("x was 1")), Literal(String("other"))])
  Function ExhaustiveOptional:
    Return: Union([Literal(String("has value")), Literal(String("no value"))])
  Function NonExhaustiveCustomBoolMissing:
    Return: Literal(String("yes"))
    Errors:
      - Non-exhaustive match on CustomBool: missing false
  Function NonExhaustiveMixedLiterals:
    Return: Union([Literal(String("http ok")), Literal(String("string success"))])
    Errors:
      - Non-exhaustive match on MixedLiterals: missing true
  Function NonExhaustiveClassPlusLiteralMissingClass:
    Return: Literal(String("http ok"))
    Errors:
      - Non-exhaustive match on SuccessOr200: missing Success
  Function UnreachableAfterCatchAll:
    Return: Union([Literal(String("catch all")), Literal(String("never reached"))])
    Errors:
      - Unreachable match arm
  Function OptionalWithCatchAll:
    Return: Union([Literal(String("no value")), Literal(String("has value"))])
  Function DuplicateBoolLiteral:
    Return: Union([Literal(String("first true")), Literal(String("second true")), Literal(String("false"))])
    Errors:
      - Unreachable match arm
  Function OverlappingTypedPatterns:
    Return: Union([Literal(String("success")), Literal(String("covers failure only (success already handled)"))])
  Function StringLiteralAfterStringType:
    Return: Union([Literal(String("any string")), Literal(String("unreachable"))])
    Errors:
      - Unreachable match arm
  Function NestedEnumVariantUnions:
    Return: Literal(String("all statuses"))
  Function UnionPatternCoversAll:
    Return: Literal(String("covered"))
  Function ExhaustiveWithUnderscore:
    Return: Union([Literal(Int(100)), Literal(Int(200)), Literal(Int(0))])
  Function PartialUnionPatternCoverage:
    Return: Literal(String("not pending"))
    Errors:
      - Non-exhaustive match on FullResult: missing Pending
  Function NonExhaustiveStringLiteral:
    Return: Union([Literal(String("User")), Literal(String("Assistant"))])
    Errors:
      - Non-exhaustive match on Role: missing "system"
  Function MatchFunctionCallScrutinee:
    Return: Union([Literal(String("active")), Literal(String("inactive")), Literal(String("pending"))])
  Function StringLiteralWithCatchAll:
    Return: Union([Literal(String("User message")), Literal(String("Assistant message")), Literal(String("Other"))])
  Function JumpTableClassTypeTag:
    Return: Union([Literal(String("cat")), Literal(String("dog")), Literal(String("bird")), Literal(String("fish"))])
  Function NonExhaustiveEnumMissingMultiple:
    Return: Literal(String("active"))
    Errors:
      - Non-exhaustive match on Status: missing Status.Inactive, Status.Pending
  Function MixedPatterns:
    Return: Union([Literal(String("zero")), Literal(String("one")), Literal(String("positive")), Literal(String("negative"))])
  Function NonExhaustiveIntLiteral:
    Return: Union([Literal(String("OK")), Literal(String("Created"))])
    Errors:
      - Non-exhaustive match on SuccessCode: missing 204
  Function LiteralAfterTypedPattern:
    Return: Union([Literal(String("int")), Literal(String("unreachable"))])
    Errors:
      - Unreachable match arm
  Function EnumVariantUnionWithCatchAll:
    Return: Union([Literal(String("actionable")), Literal(String("other"))])
